--- a/views/greet.erb
+++ b/views/greet.erb
@@ -1,6 +1,6 @@
 <form action="/" method="post">
   <h4>Hello, what is your name?</h4>
   <p>&nbsp;</p>
-  <input type="text" name="name" class="span2"><br />
-  <button type="submit" class="btn">Submit</button>
+  <input type="text" name="name" class="span3"><br />
+  <button type="submit" class="btn span3" style="margin-left: 0px !important;">Submit</button>
 </form>
