--- a/views/bet.erb
+++ b/views/bet.erb
@@ -1,4 +1,4 @@
-<form action="/bet" method="post">
+<form method="post">
   <h4><%= session[:player_name] %>, how much would you like to bet on this hand?</h4>
   <p><em>You current have $<%= session[:chips] %> available to bet.</em></p>
   <p>&nbsp;</p>
