--- a/views/greet.erb
+++ b/views/greet.erb
@@ -1,4 +1,4 @@
-<form action="/" method="post">
+<form method="post">
   <h4>Hello, what is your name?</h4>
   <p>&nbsp;</p>
   <input type="text" name="name" class="span3"><br />
