--- a/views/game.erb
+++ b/views/game.erb
@@ -3,4 +3,9 @@
 <div id="dealer-actions"></div>
 <div id="player-cards" class="well span12"></div>
 <div id="player-status"></div>
-<div id="player-actions"></div>
+<div id="player-actions">
+  <div class="btn-group span2">
+    <button class="btn btn-success">Hit</button>
+    <button class="btn btn-danger">Stay</button>
+  </div>
+</div>
