--- a/views/game.erb
+++ b/views/game.erb
@@ -2,7 +2,7 @@
 <div id="dealer-status"></div>
 <div id="player-cards" class="well span12">
   <% @player.cards.each do |card| %>
-  <img src="<%= "#{card.image}" %>" class="playing-card" />
+      <img src="<%= "#{card.image}" %>" class="playing-card span2"/>
   <% end %>
 </div>
 <div id="player-status"></div>
