display player score

--- a/views/_player_status.erb
+++ b/views/_player_status.erb
@@ -1,3 +1,6 @@
-<div class="alert alert-info span<%= "#{CARD_WELL_SPAN_WIDTH}" %>">
-
+<div class="alert alert-info span<%= "#{CARD_WELL_SPAN_WIDTH}" %> pull-right" style="padding: 8px 25px 8px 14px;">
+  <%= @player.name %>'s current score is:
+  <strong><%= "#{@player.hand_is_soft_or_hard.nil? ?
+          '' :
+          "#{@player.hand_is_soft_or_hard} " } #{@player.hand_value}" %></strong>
 </div>
