--- a/views/game.erb
+++ b/views/game.erb
@@ -1,11 +1,20 @@
 <% PLAYER_CARD_WIDTH_DURING_PLAY = 2 %>
 <% PLAYER_CARD_WIDTH_AFTER_PLAY = 1 %>
-<% CARD_WELL_SPAN_WIDTH = 8 # MUST BE ODD!!!    %>
+<% CARD_WELL_SPAN_WIDTH = 8 # MUST BE ODD!!! %>
 
-<div class="row span12">
-  <%= erb :'_actions' %>
-  <%= erb :'_dealer_cards' %>
+<div class="span12">
+  <div class="row">
+    <%= erb :'_actions' %>
+    <%= erb :'_dealer_cards' %>
+    <%= erb :'_dealer_status' %>
+  </div>
 </div>
-<div class="row span12">
+
+<div class="span12">
+  <div class="row">
     <%= erb :'_player_cards' %>
+  </div>
+  <div class="row">
+    <%= erb :'_player_status' %>
+  </div>
 </div>
