affix action nav

--- a/views/_actions.erb
+++ b/views/_actions.erb
@@ -1,4 +1,4 @@
-<ul class="nav nav-list span3 well">
+<ul class="nav nav-list span3 well affix">
   <li class="nav-header">USER ACTIONS</li>
   <li><a href="/actions/hit/player"><i class="icon-thumbs-up"></i> Hit</a></li>
   <li><a href="/actions/stay/player"><i class="icon-thumbs-down"></i> Stay</a></li>
