--- a/views/_actions.erb
+++ b/views/_actions.erb
@@ -1,5 +1,14 @@
-<ul class="nav nav-list span3 well affix">
-  <li class="nav-header">USER ACTIONS</li>
-  <li><a href="/actions/hit/player"><i class="icon-thumbs-up"></i> Hit</a></li>
-  <li><a href="/actions/stay/player"><i class="icon-thumbs-down"></i> Stay</a></li>
-</ul>
+<% if @player.finished %>
+    <ul class="nav nav-list span3 well affix">
+      <li class="nav-header">DEALER ACTIONS</li>
+      <li><a href="/actions/hit/dealer"><i class="icon-thumbs-up"></i> Hit dealer's hand</a></li>
+      <li class="divider"></li>
+    </ul>
+<% else %>
+    <ul class="nav nav-list span3 well affix">
+      <li class="nav-header">USER ACTIONS</li>
+      <li><a href="/actions/hit/player"><i class="icon-thumbs-up"></i> Hit</a></li>
+      <li><a href="/actions/stay/player"><i class="icon-thumbs-down"></i> Stay</a></li>
+      <li class="divider"></li>
+    </ul>
+<% end %>
