--- a/views/_dealer_status.erb
+++ b/views/_dealer_status.erb
@@ -1,5 +1,5 @@
-<div class="alert alert-info span<%= "#{CARD_WELL_SPAN_WIDTH}" %> pull-right" style="padding: 8px 25px 8px 14px;">
-  Dealer's current score is:
+<div class="alert alert-info" style="margin-bottom: 0px;">
+  Dealer's current score is:<br />
   <strong><%= "#{@dealer.hand_is_soft_or_hard.nil? ?
           '' :
           "#{@dealer.hand_is_soft_or_hard} " } #{@dealer.hand_value}" %></strong>
