--- a/views/_player_status.erb
+++ b/views/_player_status.erb
@@ -1,5 +1,9 @@
-<div class="alert alert-info" style="margin-bottom: 0px;">
-  <%= @player.name %>'s current score is:<br />
+<div class="alert<%= " alert-info" unless @player.finished %>" style="margin-bottom: 0px;">
+  <% if @player.finished %>
+      <%= @player.name %> stayed at:<br/>
+  <% else %>
+      <%= @player.name %>'s current score is:<br/>
+  <% end %>
   <strong><%= "#{@player.hand_is_soft_or_hard.nil? ?
           '' :
           "#{@player.hand_is_soft_or_hard} " } #{@player.hand_value}" %></strong>
