--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,14 +5,17 @@
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/application.css">
   </head>
-  <body style="padding-top: 50px;">
+  <body style="padding-top: 75px;">
 
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-            <ul class="nav">
-              <li><a href="/">Start a new game</a></li>
-            </ul>
+          <ul class="nav">
+            <li><a href="/">Start a new game</a></li>
+          </ul>
+          <ul class="nav pull-right">
+            <li><a href="#" class="brand"><img src="/images/logo.png" alt="Tealeaf Blackjack" style="height: 25px"/></a></li>
+          </ul>
         </div>
       </div>
     </div>
