display player status during dealer's turn

--- a/views/_actions.erb
+++ b/views/_actions.erb
@@ -4,6 +4,8 @@
       <li><a href="/actions/hit/dealer"><i class="icon-thumbs-up"></i> Hit dealer's hand</a></li>
       <li class="divider"></li>
       <li><%= erb :'_dealer_status' %></li>
+      <li>&nbsp;</li>
+      <li><%= erb :'_player_status' %></li>
     </ul>
 <% else %>
     <ul class="nav nav-list span3 well affix">
