display game result

--- a/views/game.erb
+++ b/views/game.erb
@@ -5,6 +5,7 @@
 <div class="span12">
   <div class="row">
     <%= erb :'_actions' %>
+    <%= erb :'_game_result' %>
     <%= erb :'_dealer_cards' %>
   </div>
 </div>
