--- a/views/_actions.erb
+++ b/views/_actions.erb
@@ -1,18 +1,26 @@
-<% if @player.finished %>
-    <ul class="nav nav-list span3 well affix">
-      <li class="nav-header">DEALER ACTIONS</li>
-      <li><a href="/actions/hit/dealer"><i class="icon-thumbs-up"></i> Hit dealer's hand</a></li>
-      <li class="divider"></li>
-      <li><%= erb :'_dealer_status' %></li>
-      <li>&nbsp;</li>
-      <li><%= erb :'_player_status' %></li>
+<% if @game.winnings_processed == true %>
+    <ul class="nav nav-list span3 alert-success well affix" style="padding: 8px 14px;">
+      <li class="nav-header">GAME ACTIONS</li>
+      <li><a href="/reset_game"><i class="icon-play"></i> Play again</a></li>
+      <li><a href="/new_round"><i class="icon-off"></i> Exit game</a></li>
     </ul>
 <% else %>
-    <ul class="nav nav-list span3 well affix">
-      <li class="nav-header">USER ACTIONS</li>
-      <li><a href="/actions/hit/player"><i class="icon-thumbs-up"></i> Hit</a></li>
-      <li><a href="/actions/stay/player"><i class="icon-thumbs-down"></i> Stay</a></li>
-      <li class="divider"></li>
-      <li><%= erb :'_player_status' %></li>
-    </ul>
+    <% if @player.finished %>
+        <ul class="nav nav-list span3 well affix">
+          <li class="nav-header">DEALER ACTIONS</li>
+          <li><a href="/actions/hit/dealer"><i class="icon-thumbs-up"></i> Hit dealer's hand</a></li>
+          <li class="divider"></li>
+          <li><%= erb :'_dealer_status' %></li>
+          <li>&nbsp;</li>
+          <li><%= erb :'_player_status' %></li>
+        </ul>
+    <% else %>
+        <ul class="nav nav-list span3 well affix">
+          <li class="nav-header">USER ACTIONS</li>
+          <li><a href="/actions/hit/player"><i class="icon-thumbs-up"></i> Hit</a></li>
+          <li><a href="/actions/stay/player"><i class="icon-thumbs-down"></i> Stay</a></li>
+          <li class="divider"></li>
+          <li><%= erb :'_player_status' %></li>
+        </ul>
+    <% end %>
 <% end %>
