--- a/views/_player_status.erb
+++ b/views/_player_status.erb
@@ -1,4 +1,4 @@
-<div class="alert<%= " alert-info" unless @player.finished %>" style="margin-bottom: 0px; padding: 8px 14px">
+<div class="alert" style="margin-bottom: 0px; padding: 8px 14px">
   <% if @player.finished %>
       <%= @player.name %> stayed at:
   <% else %>
