--- a/views/_game_result.erb
+++ b/views/_game_result.erb
@@ -8,7 +8,7 @@
          message     = "Whew, #{@player.name} won!"
        when Blackjack::PLAYER_BUSTED
          alert_class = 'lose'
-         message     = "Whoops! #{@player.name} pushed took a chance and lost!"
+         message     = "Whoops! #{@player.name} took a chance and lost!"
        when Blackjack::DEALER_HAS_BLACKJACK
          alert_class = 'lose'
          message     = 'Dealer got blackjack. Better luck next time.'
