--- a/views/_actions.erb
+++ b/views/_actions.erb
@@ -1,3 +1,5 @@
+<!--TODO: Display current bet/chips-->
+<!--TODO: Display w/l/p stats-->
 <% if @game.round_over? %>
     <ul class="nav nav-list span3 affix" style="padding: 8px 14px;">
       <li class="nav-header">GAME ACTIONS</li>
