--- a/views/bet.erb
+++ b/views/bet.erb
@@ -1,3 +1,4 @@
+<!--TODO: Only allow bets <= the player's chips total-->
 <% if already_playing_hand %>
     <h4>I'm sorry, you are already playing a hand.</h4><br/>
     <p>
