--- a/public/application.css
+++ b/public/application.css
@@ -2,4 +2,7 @@
     border: 1px solid black;
     margin-top: 10px;
     margin-bottom: 10px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
 }
