--- a/views/bet.erb
+++ b/views/bet.erb
@@ -1,4 +1,8 @@
-<!--TODO: Only allow bets <= the player's chips total-->
+<% if flash(:bet).has_key?(:error) %>
+    <div class="alert alert-error">
+      <%= flash(:bet)[:error] %>
+    </div>
+<% end %>
 <% if already_playing_hand %>
     <h4>I'm sorry, you are already playing a hand.</h4><br/>
     <p>
