--- a/views/bet.erb
+++ b/views/bet.erb
@@ -21,7 +21,7 @@
 
       <h4><%= @player.name %>, how much would you like to bet on this hand?</h4>
 
-      <p><em>You current have $<%= @player.chips %> available to bet.</em></p>
+      <p><em>You currently have $<%= @player.chips %> available to bet.</em></p>
 
       <p>&nbsp;</p>
       <input type="text" name="bet" class="span2"><br/>
