display player stats

--- a/views/_actions.erb
+++ b/views/_actions.erb
@@ -1,7 +1,7 @@
 <!--TODO: Display current bet/chips-->
 <!--TODO: Display w/l/p stats-->
 <% if @game.round_over? %>
-    <ul class="nav nav-list span3 affix" style="padding: 8px 14px;">
+    <ul class="nav nav-list" style="padding: 8px 14px;">
       <li class="nav-header">GAME ACTIONS</li>
       <% if @player.chips > 0 %>
           <li><a href="/new_round"><i class="icon-play"></i> Play another round</a></li>
@@ -12,7 +12,7 @@
     </ul>
 <% else %>
     <% if @player.finished %>
-        <ul class="nav nav-list span3 affix">
+        <ul class="nav nav-list">
           <li class="nav-header">DEALER ACTIONS</li>
           <li><a href="/actions/hit/dealer"><i class="icon-thumbs-up"></i> Hit dealer's hand</a></li>
           <li class="divider"></li>
@@ -21,7 +21,7 @@
           <li><%= erb :'_player_status' %></li>
         </ul>
     <% else %>
-        <ul class="nav nav-list span3 affix">
+        <ul class="nav nav-list">
           <li class="nav-header">USER ACTIONS</li>
           <li><a href="/actions/hit/player"><i class="icon-thumbs-up"></i> Hit</a></li>
           <li><a href="/actions/stay/player"><i class="icon-thumbs-down"></i> Stay</a></li>
