--- a/views/greet.erb
+++ b/views/greet.erb
@@ -1,4 +1,4 @@
-<% if already_playing_game %>
+<% if ongoing_game_exists? %>
     <div class="alert alert-error clearfix">
       <p class="span12">Warning, <strong><%= "#{@player.name}" %></strong> is already playing a game.</p>
       <p><a href="/game" class="btn btn-info span3">Click here to resume</a></p>
