new game at /new/game

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,7 @@
       <div class="navbar-inner">
         <div class="container">
           <ul class="nav">
-            <li><a href="/">Start a new game</a></li>
+            <li><a href="/new/game">Start a new game</a></li>
           </ul>
           <ul class="nav pull-right">
             <li><a href="#" class="brand"><img src="/images/logo.png" alt="Tealeaf Blackjack" style="height: 25px"/></a></li>
