--- a/views/greet.erb
+++ b/views/greet.erb
@@ -33,13 +33,12 @@
     </div>
 <% end %>
 <div class="row">
-  <button href="#" type="button" class="span3 btn btn-success"><i class='icon-play icon-white'></i> Start game
-  </button>
+  <a href="/bet" type="button" class="span3 btn btn-success"><i class='icon-play icon-white'></i> Start game</a>
 </div>
 <p>&nbsp;</p>
 <h5>There are currently <%= @players.count %> players at the table</h5>
-<ol class="unstyled player-list">
-  <% @players.each do |_, p| %>
+<ol class="player-list">
+  <% @players.each do |p| %>
       <li><%= p.name %></li>
   <% end %>
 </ol>
