--- a/views/_player_stats.erb
+++ b/views/_player_stats.erb
@@ -1,13 +1,14 @@
 <ul class="nav nav-list player-stats">
   <% @players.each do |p| %>
-      <li class="nav-header"><%= p.name.upcase %>'S STATS</li>
-      <li class="disabled">Current bet: <strong>$<%= "#{p.bet}" %></strong></li>
-      <li class="disabled">Chips remaining: <strong>$<%= "#{p.chips - p.bet}" %></strong></li>
-      <li class="disabled">&nbsp;</li>
-      <li class="disabled">Wins: <strong><%= "#{p.wins_num}" %></strong></li>
-      <li class="disabled">Losses: <strong><%= "#{p.losses_num}" %></strong></li>
-      <li class="disabled">Pushes: <strong><%= "#{p.pushes_num}" %></strong></li>
-      <li class="disabled">&nbsp;</li>
-
-<% end %>
+      <% if p.active %>
+          <li class="nav-header"><%= p.name.upcase %>'S STATS</li>
+          <li class="disabled">Current bet: <strong>$<%= "#{p.bet}" %></strong></li>
+          <li class="disabled">Chips remaining: <strong>$<%= "#{p.chips - p.bet}" %></strong></li>
+          <li class="disabled">&nbsp;</li>
+          <li class="disabled">Wins: <strong><%= "#{p.wins_num}" %></strong></li>
+          <li class="disabled">Losses: <strong><%= "#{p.losses_num}" %></strong></li>
+          <li class="disabled">Pushes: <strong><%= "#{p.pushes_num}" %></strong></li>
+          <li class="disabled">&nbsp;</li>
+      <% end %>
+  <% end %>
 </ul>
