--- a/views/_player_status.erb
+++ b/views/_player_status.erb
@@ -1,19 +1,42 @@
-<% @players.each do |p| %>
+<!-- show current player's cards, then loop through the other player's cards showing them -->
+<% if @current_player.active %>
     <li>
       <div class="alert" style="margin-bottom: 0px; padding: 8px 14px">
-        <% if p.finished %>
-            <%= p.name %> stayed at:
+        <% if @current_player.finished %>
+            <%= @current_player.name %> stayed at:
         <% else %>
-            <%= p.name %>'s current score is:
+            <%= @current_player.name %>'s current score is:
         <% end %>
-        <% if p.hand_is_blackjack? %>
-        <strong>blackjack!</strong>
+        <% if @current_player.hand_is_blackjack? %>
+            <strong>blackjack!</strong>
         <% else %>
-        <strong style="display: inline-block;"><%= "#{p.hand_is_soft_or_hard.nil? ?
-                '' :
-                "#{p.hand_is_soft_or_hard} " } #{p.hand_value}" %></strong>
-            <% end %>
+            <strong style="display: inline-block;"><%= "#{@current_player.hand_is_soft_or_hard.nil? ?
+                    '' :
+                    "#{@current_player.hand_is_soft_or_hard} " } #{@current_player.hand_value}" %></strong>
+        <% end %>
       </div>
     </li>
     <li>&nbsp;</li>
+<% end %>
+
+<% @players.each_with_index do |p, i| %>
+    <% unless i == @game.current_player_index || !p.active %>
+        <li>
+          <div class="alert" style="margin-bottom: 0px; padding: 8px 14px">
+            <% if p.finished %>
+                <%= p.name %> stayed at:
+            <% else %>
+                <%= p.name %>'s current score is:
+            <% end %>
+            <% if p.hand_is_blackjack? %>
+                <strong>blackjack!</strong>
+            <% else %>
+                <strong style="display: inline-block;"><%= "#{p.hand_is_soft_or_hard.nil? ?
+                        '' :
+                        "#{p.hand_is_soft_or_hard} " } #{p.hand_value}" %></strong>
+            <% end %>
+          </div>
+        </li>
+        <li>&nbsp;</li>
+    <% end %>
 <% end %>
