Allow table reset from nav bar

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,10 +11,11 @@
       <div class="navbar-inner">
         <div class="container">
           <ul class="nav">
-            <li><a href="/new/game">Start a new game</a></li>
+            <li><a href="/">Start a new game</a></li>
+            <li><a href="/reset_game">Reset current table</a></li>
           </ul>
           <ul class="nav pull-right">
-            <li><a href="#" class="brand"><img src="/images/logo.png" alt="Tealeaf Blackjack" style="height: 25px"/></a></li>
+            <li><a href="#" class="brand"><img src="/images/logo.png" alt="Tealeaf Blackjack"></a></li>
           </ul>
         </div>
       </div>
